--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://cdn-cws.datafloat.com/AGY/images/company/AGY/agency-logo.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="https://cdn-cws.datafloat.com/AGY/images/company/AGY/agency-logo.svg" />
+    <link rel="icon" href="/images/Concepcion_logo-removebg-preview.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/images/Concepcion_logo-removebg-preview.png" />
     <meta name="theme-color" content="#000000" />
-    <title>The Agency</title>
+    <title>Concepcion Pena</title>
   </head>
   <body>
     <div id="root"></div>
