--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/Donlogo.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/images/Donlogo.png" />
+    <link rel="icon" href="/images/jemeylogo1.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/images/jemeylogo1.png" />
     <meta name="theme-color" content="#000000" />
-    <title>Don Website</title>
+    <title>Jeremy Denham Website</title>
   </head>
   <body>
     <div id="root"></div>
